# cv-algos

./: .gitignore  CMakeLists.txt  README.md
algorithms/: CMakeLists.txt
algorithms/include/: canny.h  cannyedgedetector.h
algorithms/src/: canny.cpp  canny_test.cpp  cannyedgedetector.cpp
algorithms/tests/: CMakeLists.txt
algorithms/tests/test_canny/: CMakeLists.txt  test_canny.cpp
canny/: CMakeLists.txt
canny/include/: cuda_env.h  cuda_gaussianfilter.cuh  gaussianfilter.h  sobelfilter.h
canny/src/: cuda_gaussianfilter.cu  gaussianfilter.cpp  main.cpp  sobelfilter.cpp
core/: CMakeLists.txt
core/include/: core.h  cudaenv.h  custd.h  img.h
core/src/: cudaenv.cpp  custd.cpp  img.cpp
core/tests/: CMakeLists.txt
core/tests/test_custd/: CMakeLists.txt  test_custd.cpp
primitives/: CMakeLists.txt
primitives/include/: ccl.h  cuda_gaussian.cuh  cuda_gaussianfilter.cuh  debug.h  doublethreshold.h  gaussian.h  gaussianfilter.h  gradient.h  hysteresis.h  nonmaxsupress.h  primitives.h  sobelfilter.h  threshold.h
primitives/src/: ccl.cpp  cuda_gaussian.cu  cuda_gaussianfilter.cu  debug.cpp  doublethreshold.cpp  gaussian.cpp  gaussianfilter.cpp  gradient.cpp  hysteresis.cpp  nonmaxsupress.cpp  sobelfilter.cpp  threshold.cpp
primitives/tests/: CMakeLists.txt
primitives/tests/test_ccl/: CMakeLists.txt  test_ccl.cpp
primitives/tests/test_gaussian/: CMakeLists.txt  test_gaussian.cpp
primitives/tests/test_gaussianfilter/: CMakeLists.txt  test_gaussianfilter.cpp
primitives/tests/test_gradient/: CMakeLists.txt  test_gradient.cpp
primitives/tests/test_sobelfilter/: CMakeLists.txt  test_sobelfilter.cpp
